service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: production-app
spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
